# hybrid-rag

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_QUALITY.md  Makefile  README.md  config.py  main.py  pyproject.toml  verify_lightrag.py
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/specs/001-hybrid-rag-baseline/: analysis.md  clarifications-answered.md  clarifications.md  plan.md  spec.md  tasks.md
config/: hybrid_search_config.yaml  pageindex_config.yaml
docs/: chunking_strategy_mapping.md  document_parsing_libraries.md  hybrid_search_integration.md  lightrag_integration.md  pageindex_api_exploration.md  rag_evaluation_research.md
docs/plans/: 2026-02-10-pageindex-api-service.md
docs/superpowers/plans/: 2026-04-10-bugfix-code-review.md
docs/superpowers/specs/: 2026-03-23-chunking-strategy-mapping-design.md
lib/: README.md  __init__.py
lib/hirag_wrapper/: __init__.py  config.yaml  wrapper.py
lib/hybrid_search/: __init__.py  config.yaml  wrapper.py
lib/lightrag/: __init__.py  config.yaml  wrapper.py
lib/pageindex_wrapper/: __init__.py  config.yaml  wrapper.py
logs/: original.pdf_20260210_182326.json
models/: database.py  document_store.py  schemas.py
services/: document_service.py  global_search_service.py  llm_client.py  pageindex_wrapper.py  search_service.py  vlm_client.py
services/legacy/: llm_client.py
tests/: test_document_service.py  test_document_store.py  test_global_search.py  test_hirag_integration.py  test_hirag_wrapper.py  test_hybrid_search_integration.py  test_hybrid_search_wrapper.py  test_integration.py  test_lightrag_integration.py  test_lightrag_wrapper.py  test_llm_client.py  test_main.py  test_pageindex_import.py  test_pdf_to_images.py  test_schemas.py  test_search_service.py  test_vlm_client.py
utils/: pdf_to_images.py
