[project]
name = "hybrid-search-practice"
version = "0.1.0"
description = "Hybrid Search Practice - A playground for experimenting with multiple RAG/Hybrid Search approaches (PageIndex, LightRAG, HiRAG, etc.)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "openai>=1.12.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "aiofiles>=23.2.0",
    # Hybrid Search modules dependencies
    "pageindex>=0.2.5",
    "lightrag-hku>=1.4.10",          # LightRAG - Graph-based dual-level retrieval
    # PageIndex submodule dependencies
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.11.0",
    "pyyaml>=6.0.0",
    "pillow>=10.0.0",
    # Database dependencies
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    # Graph and ML dependencies (for LightRAG/HiRAG)
    "networkx>=3.0",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
